# charybdis

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  test.asm
.github/workflows/: check.yaml
charybdis/: cli.py  disasm.py  insn.py  io.py
charybdis/ann/: ann_parser.py  parser.py  sym_parser.py  types.py
templates/: Makefile.mustache
tests/: test.asm  test_cli.py  test_disasm.py  test_insn.py  test_io.py
tests/ann/: test_ann_parser.py  test_parser.py  test_sym_parser.py
