[tool.poetry]
name = "charybdis"
version = "0.1.0"
description = ""
authors = ["Forest Belton <forest@homolo.gy>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
