[tool.poetry]
name = "charybdis"
version = "0.1.0"
description = ""
authors = ["Forest Belton <forest@homolo.gy>"]
readme = "README.md"

[tool.poetry.scripts]
cli = "charybdis.cli:main"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.1"
pytest = "^7.3.1"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
