[tool.poetry]
name = "charybdis"
version = "0.1.0"
description = ""
authors = ["Forest Belton <forest@homolo.gy>"]
readme = "README.md"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cli = "charybdis.cli:main"

[tool.poetry.dependencies]
python = "^3.11"
chevron = "^0.14.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.1"
pytest = "^7.3.1"
black = "^23.3.0"
mypy = "^1.3.0"
types-chevron = "^0.14.2.4"

[tool.mypy]
files = "charybdis/**/*.py,tests/**/*.py"
ignore_missing_imports = false
mypy_path = "$MYPY_CONFIG_FILE_DIR/stubs"
strict = true
